Always pass all arguments